[package]
name = "multi-duino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
serde_toml = "0.0.1"
sha1 = "0.10.5"
tokio = { version = "1.17", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "full",
] }
tui = "0.19"
crossterm = "0.26.1"
log = "0.4.17"
simplelog = "0.12.1"
once_cell = "1.17.1"
lazy_static = "1.4.0"
chrono = "0.4.24"
futures = "0.3.28"
